--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "luminant",
-  "version": "0.0.0-development",
+  "version": "0.0.0",
   "description": "Super-fast, super-simple react site server",
   "main": "index.js",
   "author": "Chris Devereux",
