--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/chai": "^3.4.35",
     "@types/cheerio": "^0.17.31",
     "@types/express": "^4.0.35",
+    "@types/extract-text-webpack-plugin": "^2.0.1",
     "@types/glob": "^5.0.30",
     "@types/history": "^4.5.0",
     "@types/lodash": "^4.14.52",
@@ -31,6 +32,7 @@
     "compose-middleware": "^2.2.0",
     "core-js": "^2.4.1",
     "express": "^4.14.1",
+    "extract-text-webpack-plugin": "^2.1.0",
     "glob": "^7.1.1",
     "history": "^4.5.1",
     "http-shutdown": "^1.1.0",
