--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "typescript": "^2.2.1",
     "webpack": "^2.2.1",
     "webpack-dev-middleware": "^1.10.1",
-    "webpack-hot-middleware": "^2.17.1"
+    "webpack-hot-middleware": "^2.17.1",
+    "webpack-node-externals": "^1.5.4"
   },
   "repository": {
     "type": "git",
