--- a/package.json
+++ b/package.json
@@ -11,6 +11,30 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@types/express": "^4.0.35",
+    "@types/react": "^15.0.12",
+    "@types/react-dom": "^0.14.23",
+    "@types/webpack": "^2.2.6",
+    "compose-middleware": "^2.2.0",
+    "core-js": "^2.4.1",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "glob": "^7.1.1",
+    "history": "^4.5.1",
+    "loader-utils": "^1.0.2",
+    "lodash": "^4.17.4",
+    "route-recognizer": "^0.2.9",
+    "serialize-javascript": "^1.3.0",
+    "ts-loader": "^2.0.1",
+    "webpack": "^2.2.1",
+    "webpack-dev-middleware": "^1.10.1",
+    "webpack-hot-middleware": "^2.17.1",
+    "webpack-node-externals": "^1.5.4"
+  },
+  "peerDependencies": {
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2"
+  },
+  "devDependencies": {
     "@types/chai": "^3.4.35",
     "@types/cheerio": "^0.17.31",
     "@types/express": "^4.0.35",
@@ -29,30 +53,16 @@
     "@types/webpack-hot-middleware": "^2.15.0",
     "chai": "^3.5.0",
     "cheerio": "^0.22.0",
-    "compose-middleware": "^2.2.0",
-    "core-js": "^2.4.1",
     "express": "^4.14.1",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "glob": "^7.1.1",
-    "history": "^4.5.1",
     "http-shutdown": "^1.1.0",
-    "loader-utils": "^1.0.2",
-    "lodash": "^4.17.4",
     "mocha": "^3.2.0",
     "node-fetch": "^1.6.3",
     "phantom": "^4.0.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "rimraf": "^2.6.1",
-    "route-recognizer": "^0.2.9",
-    "serialize-javascript": "^1.3.0",
-    "ts-loader": "^2.0.1",
     "ts-node": "^2.1.0",
-    "typescript": "^2.2.1",
-    "webpack": "^2.2.1",
-    "webpack-dev-middleware": "^1.10.1",
-    "webpack-hot-middleware": "^2.17.1",
-    "webpack-node-externals": "^1.5.4"
+    "typescript": "^2.2.1"
   },
   "repository": {
     "type": "git",
