--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "loader-utils": "^1.0.2",
     "lodash": "^4.17.4",
     "route-recognizer": "^0.2.9",
+    "semantic-release": "^6.3.2",
     "serialize-javascript": "^1.3.0",
     "ts-loader": "^2.0.1",
     "webpack": "^2.2.1",
