--- a/package.json
+++ b/package.json
@@ -12,19 +12,25 @@
   "license": "MIT",
   "dependencies": {
     "@types/express": "^4.0.35",
+    "@types/graphql": "^0.9.1",
     "@types/react": "^15.0.12",
     "@types/react-dom": "^0.14.23",
+    "@types/superagent": "^3.5.0",
     "@types/webpack": "^2.2.6",
     "compose-middleware": "^2.2.0",
     "core-js": "^2.4.1",
+    "dataloader": "^1.3.0",
     "extract-text-webpack-plugin": "^2.1.0",
     "glob": "^7.1.1",
+    "graphql": "^0.10.1",
+    "graphql-tools": "^1.0.0",
     "history": "^4.5.1",
     "loader-utils": "^1.0.2",
     "lodash": "^4.17.4",
     "route-recognizer": "^0.2.9",
     "semantic-release": "^6.3.2",
     "serialize-javascript": "^1.3.0",
+    "superagent": "^3.5.2",
     "ts-loader": "^2.0.1",
     "webpack": "^2.2.1",
     "webpack-dev-middleware": "^1.10.1",
@@ -63,7 +69,7 @@
     "react-dom": "^15.4.2",
     "rimraf": "^2.6.1",
     "ts-node": "^2.1.0",
-    "typescript": "^2.2.1"
+    "typescript": "^2.3.4"
   },
   "repository": {
     "type": "git",
