--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,10 @@
     "moduleResolution": "node",
     "experimentalDecorators": true,
     "skipLibCheck": true,
+    "typeRoots": [
+      "node_modules/@types",
+      "typings"
+    ],
     "lib": [
       "es2015",
       "dom"
